# Gate

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  config.py  constants.py  docker-compose.yml  lifespan.py  main.py  pyproject.toml  requirements.txt  scheduler.py
alembic/: README  env.py
app/: __init__.py  config.py  dependencies.py  exceptions.py  lifespan.py  main.py  scheduler.py
app/api/: backtests.py  contracts.py  dashboard.py  health.py  notifications.py  rankings.py  replay.py  router.py  scans.py  trading.py
app/backtest/: __init__.py  engine.py  execution.py  metrics.py  reports.py  walk_forward.py
app/bitget/: __init__.py  client.py  rest_client.py
app/coinglass/: __init__.py  client.py
app/database/: __init__.py  migrations.py  models.py  repository.py  session.py
app/gate/: __init__.py  client.py  endpoints.py  historical.py  normalizer.py  pagination.py  rate_limiter.py  rest_client.py  trades.py  units.py  validators.py  websocket_client.py
app/indicators/: __init__.py  atr.py  bollinger.py  divergence.py  dmi_adx.py  ema.py  mfi.py  oi.py  turnover.py  vwap.py
app/notifications/: __init__.py  chunker.py  deduplication.py  discord.py  (+2 more)
docs/: architecture.md  deployment.md  gate-data-map.md  replay-backtest.md  scoring.md  troubleshooting.md
scripts/: __init__.py  backtest.py  generate_secret.py  replay_range.py  run_once.py  verify_database.py  verify_gate_api.py
structure/: ranges.py  regimes.py
templates/: error.html  rankings.html  status.html
tests/: conftest.py
trading/: risk.py  service.py
(+57 files in other folders)
