[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gate-quant-ranking-scanner"
version = "1.0.0"
description = "Gate USDT perpetual quantitative ranking, replay and backtest service"
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "httpx==0.28.1",
  "websockets==14.1",
  "pandas==2.2.3",
  "numpy==2.2.1",
  "SQLAlchemy==2.0.36",
  "alembic==1.14.0",
  "asyncpg==0.30.0",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.1",
  "jinja2==3.1.5",
  "python-multipart==0.0.20"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.0",
  "respx==0.22.0",
  "ruff==0.9.2",
  "mypy==1.14.1",
  "types-python-dateutil==2.9.0.20241206"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = ["E701", "E702"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
